fixed connect header and card list alignment

--- a/main.css
+++ b/main.css
@@ -108,7 +108,6 @@ ul.navbar li a:hover {
 
 #connect, #projects {
   grid-template-columns: 1fr;
-  justify-items: center;
 }
 
 .card-list {
